Fixed spacing

--- a/static/index.css
+++ b/static/index.css
@@ -67,7 +67,7 @@ p {
   font-size: 4vw;
   line-height: 120%;
   margin-bottom: 40px;
-  margin-top: 10px;
+  margin-top: 50px;
 }
 
 .hero-subheading {
@@ -102,10 +102,16 @@ p {
     height: min-content;
 } */
 
+.about-us-right-side .section-heading{
+  margin-top: 10px;
+}
+
 .about-us-img {
     /* border-radius: 10px; */
     /* margin-top: 10vh; */
-    height: 100%;
+    width: 500px;
+    /* height: 100%; */
+    margin: auto;
 }
 
 .about-us-container {
@@ -142,7 +148,7 @@ p {
 }
 
 .objective-img {
-  width: 60%;
+  width: 500px;
   /* height: 100%; */
   /* margin-right: 10vw;
   margin-top: -1vh; */
@@ -168,9 +174,6 @@ p {
   /* width: 40%; */
   /* margin: 1vh auto; */
   /* height: 100%; */
-}
-
-.incharge-message-img {
 }
 
 .incharge-message-heading {
@@ -249,6 +252,12 @@ p {
   .mentor-card {
     width: 25vw;
   }
+  .about-us-img{
+    padding-right: 50px;
+  }
+  .incharge-message-img {
+    padding-right: 50px;
+  }  
 }
 
 @media screen and (max-width: 768px) {
